@@ -4,9 +4,13 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - Default bounds and size can be overriden for a given map document
+- Change XSLT transform to reverse the order of the layers since
+mapserver actually reversed them.
+
 Bug fixes:
 ~~~~~~~~~~
 - First step toward IE compatibility
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Update devel docs
+
